# openteam

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  OPENTEAM.md  README.md  TEAMOS.md  openteam  openteam_common.py  openteam_legacy.py  openteam_logging.py  openteam_yaml.py  pyproject.toml  run.sh  team_os_common.py  team_os_logging.py  team_os_yaml.py  teamos  yaml.py
cluster/: config.yaml
docker/: runtime-control-plane.Dockerfile
docs/: ARCHITECTURE_CREWAI_N8N.md  CLUSTER_RUNBOOK.md  EXECUTION_RUNBOOK.md  GOVERNANCE.md  HUB_RUNBOOK.md  NODE_BOOTSTRAP.md  REPO_BOOTSTRAP_AND_UPGRADE.md  SECURITY.md
evals/: README.md  __init__.py  smoke_self_improve.sh  test_concurrency_locks.py  test_migration_dry_run.py  test_repo_purity.py  test_requirements_raw_first.py  test_system_requirements_update.py  test_workspace_paths.py
openteam_cli/: __init__.py  _shared.py  cluster.py  cockpit.py  cockpit_commands.py  cockpit_state.py  config.py  http.py  hub.py  misc.py  panel.py  project.py  requirements.py  status.py  team.py  workspace.py
policies/: agent_concurrency.yaml  self_improve.yaml
prompt-library/: SELF_IMPROVE.md
roles/: PM-Intake.md
schemas/: project_config.schema.json  requirements.schema.json
scripts/: _common.sh  bootstrap_and_run.py  doctor.sh  new_task.sh  open_issue.sh  openteam.sh  policy_check.py  policy_check.sh  retro.sh  runtime_init.sh  runtime_secrets.sh  runtime_up_image.sh  self_improve.sh  skill_boot.sh  teamos.sh
team_os_cli/: __init__.py  _shared.py  cluster.py  config.py  http.py  hub.py  misc.py  panel.py  project.py  status.py  (+3 more)
(+1163 files in other folders)
