[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openteam"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "openai-agents",
    "PyYAML>=6.0.1",
    "psycopg[binary]>=3.2.0",
    "litellm",
    "redis",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
]
crewai = [
    "crewai @ https://codeload.github.com/crewAIInc/crewAI/tar.gz/refs/heads/main#subdirectory=lib/crewai",
]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
